Add static map endpoint
